Better EB filtering for tags

--- a/template.yml
+++ b/template.yml
@@ -96,6 +96,9 @@ Resources:
             - organizations.amazonaws.com
           eventName:
             - TagResource
+          requestParameters:
+            tags:
+              "key": [ !Ref TagName ]
       State: 'ENABLED'
       Targets:
         - Arn: !GetAtt ProcessingQueue.Arn
